# WSL

./: .gitignore  .llmignore  ABSOLUTE_MAXIMUM_OVERNIGHT.txt  AGENT1_REPORT.md  AGENTS.md  AGENT_DOC_BUILD_REPORT.md  AGENT_HANDOFF.md  AGENT_QUICK_WINS_REPORT.md  CHECK_MORNING.sh  CLAUDE.md  CLEANUP_SUMMARY.md  FINAL_OVERNIGHT_STATUS.txt  HIM_PROFIT_MAX_RESULTS.md  LLM_CONTEXT_SUMMARY.md  M5_UNBLOCK_REPORT.md  OVERNIGHT_FULL_STATUS.txt  OVERNIGHT_SUMMARY.txt  PROGRESS.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  STATUS_01_48AM.txt  VM_RECOVERY_CONFIG.md  WALK_FORWARD_RESEARCH_REPORT.md  audit_details.json  llm_context_report.md  look.py  pytest.ini  repo_map.md  requirements.txt  requirements_gpu.txt  skills-lock.json
.agent_state/: cpp_dataset_builder_checkpoint.json
.claude/: mcp_config.json  settings.json
.cursor/: mcp.json
asset_graph/: __init__.py  cli.py  config.py  gat.py  graph.py
boi/: __init__.py  data.py  features.py  labels.py  resample.py
causal_engine/: __init__.py  cli.py  config.py  dag.py  information.py  pc_algorithm.py
config/: dominion_ignore_policy.json  forbidden_tokens.json
cpp/: CMakeLists.txt  hydra_288b_fast_train.cpp
cpp/kernels/: microstructure.cpp  microstructure.hpp  module.cpp  rolling.cpp  rolling.hpp  statistical.cpp  statistical.hpp  technical.cpp  technical.hpp
data/: DATASET_V1_README.md  dataset_v1.parquet  dataset_v1_metadata.json  hydra_xauusd_m5_master_schema.json  test_v1.parquet  train_v1.parquet  train_v1_feature_stats.csv  training_verdict.txt  val_v1.parquet
data_pipeline/: __init__.py  cli.py  config.py  pipeline.py  schema.py
datasets/: build_multitf.py  scalp_m15.py  strategy_final.py  strategy_v1.py  strategy_v2.py  strategy_v3.py  strategy_v4.py
docs/: AGENT_README.md  CODEX_WORKFLOW.md  COLLABORATION.md  DAN_SETUP_CMD.md  DOCTOR_CONTRACT.md  DOMINION_V2.md  ENGINEERING_STANDARDS.md  HYDRA_MOE_IMPLEMENTATION.md  INDEX.md  LOCAL_LLM.md  MASTER_NAVIGATION.md  MATIN_SETUP.md  NATIVE_CORE.md  PLATFORM_LAYOUT.md  RAGD_CODEX_WORKFLOW.md  RAGD_INGESTION_MANIFEST.md  (+4 more)
dominion_cpp/: ADVANCED_FEATURES_STATUS.md  BUILD_STATUS.md  CMakeLists.txt  FINAL_STATUS.md  MIGRATION_STATUS.md  README.md
dominion_cpp/bindings/: python.cpp
dominion_cpp/include/dominion/: bus.hpp  causal.hpp  config.hpp  copulas.hpp  dataset_builder_v2.hpp  features.hpp  fusion.hpp  health.hpp  information.hpp  jumps.hpp  microstructure_advanced.hpp  multifractal.hpp  network.hpp  noise.hpp  pipeline.hpp  quantum.hpp  recurrence.hpp  sources.hpp  sqlite3_wrapper.h  stochastic_vol.hpp  storage.hpp  topology.hpp  types.hpp
dominion_cpp/src/: cli.cpp  dataset_builder.cpp  dataset_builder_v2.cpp  main.cpp
dominion_cpp/src/bus/: client.cpp  publisher.cpp
dominion_cpp/src/features/: calendar.cpp  causal_features.cpp  cot_features.cpp  crossasset.cpp  crossasset_advanced.cpp  macro.cpp  microstructure.cpp  ml_features.cpp  orderbook_features.cpp  price.cpp  primitives.cpp  regime.cpp  signal_processing.cpp  store.cpp
dominion_cpp/src/features/information/: lz_complexity.cpp  permutation_entropy.cpp  sample_entropy.cpp  transfer_entropy.cpp
dominion_cpp/src/features/microstructure/: noise_models.cpp
dominion_cpp/src/features/multifractal/: dfa.cpp  mfdfa.cpp
dominion_cpp/src/features/noise/: emd.cpp  features.cpp  ssa.cpp  vmd.cpp  wavelet.cpp
dominion_cpp/src/fusion/: bridge.cpp  conflict.cpp  kalman.cpp
dominion_cpp/src/health/: anomaly.cpp  monitor.cpp  report.cpp
dominion_cpp/src/mt5/: collector.cpp  safety.cpp
dominion_cpp/src/pipeline/: config.cpp  pipeline.cpp  schema.cpp  storage.cpp
dominion_cpp/src/sources/: alphavantage.cpp  cot.cpp  fred.cpp  mt5.cpp  yahoo.cpp
dominion_cpp/tests/: CMakeLists.txt  test_point_in_time_safety.cpp
hydra/backtest/cpp/: CMakeLists.txt  backtester.cpp  backtester.hpp  duckdb_loader.cpp  main.cpp  onnx_runner.cpp
ragd/: AGENT_HANDOFF.md  CMakeLists.txt  PROGRESS.md  README.md  install.sh  uninstall.sh
ragd/docs/: agent_integration_guide.md  api_reference.md  architecture.md  mcp_tools.md
ragd/examples/: mcp_call_example.json  query_example.sh  remember_example.sh
ragd/include/dominion_native/: agent_conflicts.hpp  agent_locks.hpp  content_hash.hpp  doctor.hpp  file_classifier.hpp  forbidden_tokens.hpp  ignore_policy.hpp  manifest_store.hpp  path_normalizer.hpp  report.hpp  scan_plan.hpp  vault_doctor.hpp  version.hpp
ragd/include/ragd/: agent_memory.h  bm25.h  config.h  dead_zone.h  http_api.h  indexer.h  intent_router.h  mcp_server.h  rag_engine.h  session_bus.h  sqlite_compat.h  storage.h  temporal.h  todo_engine.h  types.h  vector_store.h  watcher.h
ragd/scripts/: agent-init.sh  config.default.json  ragd-cli.sh  ragd.service  ragd.sh  ragd_maintenance.py  ragd_mcp_stdio.py
ragd/sql/migrations/: 0002_kg_nodes_edges.sql  0003_ledger_entries.sql  0004_profile_spans.sql
ragd/src/: agent_memory.cpp  bm25.cpp  config.cpp  dead_zone.cpp  http_api.cpp  indexer.cpp  intent_router.cpp  main.cpp  mcp_server.cpp  rag_engine.cpp  session_bus.cpp  storage.cpp  temporal.cpp  todo_engine.cpp  vector_store.cpp  watcher.cpp
ragd/src/native/: agent_conflicts.cpp  agent_locks.cpp  content_hash.cpp  doctor.cpp  file_classifier.cpp  forbidden_tokens.cpp  ignore_policy.cpp  manifest_store.cpp  path_normalizer.cpp  report.cpp  scan_plan.cpp  vault_doctor.cpp
ragd/tests/: CMakeLists.txt  test_agent_memory.cpp  test_bm25.cpp  test_dead_zone.cpp  test_indexer.cpp  test_intent_router.cpp  test_maintenance_report.py  test_mcp_server.cpp  test_rag_engine.cpp  test_session_bus.cpp  test_storage.cpp  test_temporal.cpp  test_todo_engine.cpp  test_vector_store.cpp  test_watcher.cpp
ragd/tests/native/: test_agent_conflicts.cpp  test_agent_locks.cpp  test_content_hash.cpp  test_doctor.cpp  test_file_classifier.cpp  test_forbidden_tokens.cpp  test_ignore_policy.cpp  test_manifest_store.cpp  test_path_normalizer.cpp  test_scan_plan.cpp  test_vault_doctor.cpp
ragd/tools/: dominion_native_cli.cpp  native_doctor_main.cpp  native_manifest_main.cpp  native_scan_main.cpp  native_vault_doctor_main.cpp
(+2553 files in other folders)
