function(add_ragd_test name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE ragd_lib)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ragd_test(test_storage)
add_ragd_test(test_bm25)
add_ragd_test(test_vector_store)
add_ragd_test(test_indexer)
add_ragd_test(test_rag_engine)
add_ragd_test(test_agent_memory)
add_ragd_test(test_todo_engine)
add_ragd_test(test_mcp_server)
