function(add_ragd_test name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE ragd_lib)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

function(add_native_test name)
  add_executable(${name} native/${name}.cpp)
  target_link_libraries(${name} PRIVATE dominion_native)
  target_compile_definitions(${name} PRIVATE DOMINION_SOURCE_ROOT="${CMAKE_SOURCE_DIR}/..")
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ragd_test(test_storage)
add_ragd_test(test_bm25)
add_ragd_test(test_vector_store)
add_ragd_test(test_indexer)
add_ragd_test(test_rag_engine)
add_ragd_test(test_agent_memory)
add_ragd_test(test_todo_engine)
add_ragd_test(test_mcp_server)
add_ragd_test(test_intent_router)
add_ragd_test(test_session_bus)
add_ragd_test(test_temporal)
add_ragd_test(test_dead_zone)
add_ragd_test(test_watcher)

add_native_test(test_content_hash)
add_native_test(test_ignore_policy)
add_native_test(test_path_normalizer)
add_native_test(test_file_classifier)
add_native_test(test_scan_plan)
add_native_test(test_manifest_store)
add_native_test(test_vault_doctor)
add_native_test(test_forbidden_tokens)
add_native_test(test_agent_locks)
add_native_test(test_agent_conflicts)
add_native_test(test_doctor)
